Fix poor placement of slider labels. Fix/hack overflowing graphs in content area.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,7 +34,7 @@ h1 span a, h1 a {color:#fff;text-decoration:none;}
 #submission li{list-style-type:none;font:0.8em Helvetica,sans-serif;position:relative;padding:0 0 1em;}
 #submission #parameters input,#submission #parameters .fd-slider{width:100%;}
 #submission .label{width:6em;text-align:right;color:#666;position:absolute;right:0;bottom:0;}
-#submission label {width:15em;display:block;padding-right:/*6em*/9em;position:relative;}
+#submission label {width:15em;display:block;padding-right:/*6em*/8em;position:relative;}
 #submission select{width:100%;}
 #submission sub,#submission sup{font-size:0.7em;}
 #controls{position:absolute;bottom:0px;height:1.5em;left:0;right:0;text-align:right;}
@@ -62,7 +62,8 @@ h1 span a, h1 a {color:#fff;text-decoration:none;}
 #content.hasnoruns #download-data{display:none;}
 #content.hasnoruns .tabs{display:none !important;}
 #content .tabs{background-color:#eee;margin-left:1px;}
-#content .tabs .selected{background-color:#fff;}-
+#content .tabs .selected{background-color:#fff;}
+#content .tab {overflow:hidden;}
 #content>div>div>div{display:none !important;}
 #download-data{position:absolute;right:1em;bottom:0;}
 #download-data input{display:block;/*border:0px solid red;*/background-color:#eee;border:1px solid #ccc;}
